Translated to English. Implemented some missing methods.